--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,13 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.3</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
